--- a/NewProject/src/NewPage.html
+++ b/NewProject/src/NewPage.html
@@ -5,16 +5,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.min.css">
 
 	<title>Моя первая страница</title>
 </head>
 <body>
 	<header>
-		<nav>
+	<nav>
+		<div class="fone animate__animated animate__backInDown">
+			<label>
 			<div class="logo">
-				Андрей Браун
+				<p class="w animate__animated animate__flip animate__delay-1s">Андрей Браун</p>
 			</div>
-			<div class="menu">
+				<div class="menu animate__animated animate__backInRight animate__delay-1s">
 				<ul>
 					<li>Обо мне</li>
 					<li>Услуги</li>
@@ -24,21 +27,26 @@
 					<li>Контакты</li>
 				</ul>
 			</div>
-		</nav>
+			</label>
+			
+		</div>
+	</nav>
 	</header>
 	<div class="main">
 		<div class="title_container">
-		<h1>Привет <br> Я Андрей Браун</h1>
+	<label>
+			<h1>Привет <br> Я Андрей Браун</h1>
 		<h4>
 			Фулл стек веб-разработчик и Android-разработчик
 		</h4>
+	</label>
 		<input type="submit" name="q" value="Обо мне">
 		<input type="submit" name="z" value="Мои работы">
 		</div>
 	</div>
 	<div class="about_me">
-		<h2>Обо мне</h2>
-		<p id="img1"><img src="img/line.png"></p>
+		<label><h2>Обо мне</h2></label>
+		<div class="pad"><div id="img1"></div></div>
 		<p id="img2"><img src="img/ava.png"></p>
 		<p id="abzats1">
 			<span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, ea? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, minus.<br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi, recusandae?</span>
@@ -49,31 +57,31 @@
 		<input type="submit" name="file" value="Скачать резюме">
 	</div>
 	<div class="whican">
-		<h2>Что я умею</h2>
-		<p id="img3"><img src="img/line.png"></p>
+		<label><h2>Что я умею</h2></label>
+		<div id="img3"><div id="img1"></div></div>
 		<ul>
-			<li><b>Веб дизайн<b>
+			<li><label><b>Веб дизайн</b></label>
 				<p>
 					Lorem ipsum, dolor sit amet consectetur.<br>
 					Lorem ipsum dolor sit. worcew<br>
 					Lorem ipsum dolor sit, amet.
 				</p>
 			</li>
-			<li><b>Разработка<b>
+			<li><label><b>Разработка</b></label>
 				<p>
 					Lorem ipsum, dolor sit amet consectetur.<br>
 					Lorem ipsum dolor sit. worcew<br>
 					Lorem ipsum dolor sit, amet.
 				</p>
 			</li>
-			<li><b>CEO-оптимизация<b>
+			<li><label><b>CEO-оптимизация</b></label>
 				<p>
 					Lorem ipsum, dolor sit amet consectetur.<br>
 					Lorem ipsum dolor sit. worcew<br>
 					Lorem ipsum dolor sit, amet.
 				</p>
 			</li>
-			<li><b>Маркетинг<b>
+			<li><label><b>Маркетинг</b></label>
 				<p>
 					Lorem ipsum, dolor sit amet consectetur.<br>
 					Lorem ipsum dolor sit. worcew<br>
@@ -83,17 +91,17 @@
 		</ul>
 	</div>
 	<div class="case">
-		<h2>Кейсы</h2>
-		<p id="img3"><img src="img/line.png"></p>
+		<label><h2>Кейсы</h2></label>
+		<div id="img3"><div id="img1"></div></div>
 		<a href="https://www.pornhub.com" target="_blank"> 
 			<input type="submit" value="VISIT LIVE SITE">	
 		</a>
 		<p id="span1"><span>Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Asperiores, nostrum.</span></p>
 	</div>
 	<div class="cost">
-		<h2>Расчет стоимости</h2>
+		<label><h2>Расчет стоимости</h2></label>
 		<ul>
-			<li>Тип сайта <br>
+			<li><label>Тип сайта</label> <br>
 				<select name="type">
 					<option value="0">Выберите пункт</option>
 					<option value="1">Интернет-представительство</option>
@@ -101,14 +109,14 @@
 					<option value="3">Веб-сервис</option>
 				</select>
 			</li>
-			<li>Дизайн <br>
+			<li><label>Дизайн</label> <br>
 				<select name="type">
 					<option value="0">Выберите пункт</option>
 					<option value="1">Пока не знаю</option>
 				</select>
 			</li>
 			</select>
-			<li>Адаптивность <br>
+			<li><label>Адаптивность</label> <br>
 				<select name="type">
 					<option value="0">Выберите пункт</option>
 					<option value="1">Пока не знаю</option>
@@ -117,6 +125,7 @@
 		</ul>
 		<img src="img/costline.png">
 		<table>
+			<label>
 			<tr>
 				<th>Сроки</th>
 				<td>0</td>
@@ -125,12 +134,15 @@
 				<th>Стоимость</th>
 				<td>0</td>
 			</tr>
+			</label>
 		</table>
 	</div>
 	<div class="stat">
-		<h2>Немного статистики</h2>
-		<p id="img3"><img src="img/line.png"></p>
-				<ul>
+		<label><h2>Немного статистики</h2></label>
+		<div id="img3"><div id="img1"></div></div>
+	
+		<ul>
+			<label>
 			<li>120
 				<p id="li1">
 					Счастливых клиентов
@@ -151,11 +163,12 @@
 					Наград получено
 				</p>
 			</li>
+			</label>
 		</ul>
 	</div>
 	<div class="otzyv">
-		<h2>Отзывы</h2>
-		<p id="img1"><img src="img/line.png"></p>
+		<label><h2>Отзывы</h2></label>
+		<div class="pad"><p id="img1"></p></div>
 		<p id="img3"><img src="img/clerk.png"></p>
 		<p>
 			<span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione, ea? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, minus.<br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi, recusandae?</span><br>
@@ -167,17 +180,19 @@
 		<img src="img/orange1.png">
 	</div>
 	<div class="contact">
-		<h2>Мои контакты</h2>
-		<img src="img/line.png">
+		<label><h2>Мои контакты</h2></label>
+		<div class="pad"><div id="img1"></div></div>
 		<p id="h">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, reprehenderit.</p>
 		<ul>
+		<label>
 			<li>Санкт-Петербург<br>Невский проспект 11</li>
 			<li>info@companyname.com</li>
 			<li>+7-999-999-99-99</li>
+		</label>
 		</ul>
 		<h3>Отправьте мне сообщение</h3>
-	<form>
-		<input type="text" name="name" placeholder="Имя" id="имя">
+	<form >
+		<input type="text" name="name" placeholder="Имя" id="имя" required="">
 		<input type="text" name="mail" placeholder="E-mail" id="mail">
 		<br><textarea placeholder="Cообщение" cols="10" rows="10"></textarea>
 		<br><input type="submit" name="send" id="send" value="Отправить" reset>
