--- a/K/src/NewPage.html
+++ b/K/src/NewPage.html
@@ -93,8 +93,8 @@
 	<div class="case">
 		<label><h2>Кейсы</h2></label>
 		<div id="img3"><div id="img1"></div></div>
-		<a href="https://www.pornhub.com" target="_blank"> 
-			<input type="submit" value="VISIT LIVE SITE">	
+			<a href="https://www.pornhub.com" target="_blank"> 
+			<input type="submit" id="q" value="VISIT LIVE SITE">	
 		</a>
 		<p id="span1"><span>Lorem, ipsum dolor sit amet consectetur adipisicing, elit. Asperiores, nostrum.</span></p>
 	</div>
