--- a/Проект/src/New_page.html
+++ b/Проект/src/New_page.html
@@ -219,5 +219,6 @@
 	<footer>
 		<nav>Copyright Ⓒ 2021 Константин Ларин Design by Web</i></nav>
 	</footer>
+	<script src="js/script.js"></script>
 </body>
 </html>
